+ swapped the color pallet for the transaction panel. + added panelContext for making draggable panels (transaction page should now be draggable)